--- a/variants/default/variables.scss
+++ b/variants/default/variables.scss
@@ -28,14 +28,16 @@ $owd-desktop-system-bar-menu-title-font-size: 14px;
 $owd-desktop-system-bar-menu-title-font-weight: 600;
 $owd-desktop-system-bar-menu-title-color: #353535;
 $owd-desktop-system-bar-menu-content-background: #353535;
-$owd-desktop-system-bar-menu-content-border-color: #1b1b1b;
 $owd-desktop-system-bar-menu-content-color: black;
+$owd-desktop-system-bar-menu-content-border-radius: 0;
+$owd-desktop-system-bar-menu-content-box-shadow: 0 0 0 1px #1b1b1b;
 
 // window
 $owd-window-background: #C0C0C0;
 $owd-window-text: black;
 $owd-window-text-active: $owd-window-text;
-$owd-window-border: 2px solid;
+$owd-window-border-width: 2px;
+$owd-window-border-style: solid;
 $owd-window-border-radius: 0;
 $owd-window-border-color: white #393939 #393939 white;
 $owd-window-border-color-inactive: white #393939 #393939 white;
@@ -138,6 +140,7 @@ $owd-window-content-padding-no-spacing: 0 2px 2px 2px;
 $owd-window-content-border-color: #ababab;
 $owd-window-content-separator: #ababab;
 $owd-window-content-tag: #b1b1b1;
+$owd-window-content-background: inherit;
 $owd-window-content-background-1: rgba(0, 0, 0, 0.05);
 $owd-window-content-background-2: rgba(0, 0, 0, 0.1);
 
