--- a/assets/styles/partials/vuetify/VBtn/mixins.scss
+++ b/assets/styles/partials/vuetify/VBtn/mixins.scss
@@ -1,19 +1,19 @@
 @mixin btn-inactive {
-  background: $owd-window-button-background-inactive;
-  box-shadow: $owd-window-button-box-shadow-inactive;
-  border-color: $owd-window-button-border-color-inactive;
-  color: $owd-window-button-icon-color-inactive;
+  background: var(--owd-window-button-background-inactive);
+  box-shadow: var(--owd-window-button-box-shadow-inactive);
+  border-color: var(--owd-window-button-border-color-inactive);
+  color: var(--owd-window-button-icon-color-inactive);
 
   &.bg-primary {
-    background: $owd-window-button-primary-background-inactive;
-    border-color: $owd-window-button-primary-border-color-inactive;
-    box-shadow: $owd-window-button-primary-box-shadow-inactive;
-    color: $owd-window-button-primary-color-inactive;
+    background: var(--owd-window-button-primary-background-inactive);
+    border-color: var(--owd-window-button-primary-border-color-inactive);
+    box-shadow: var(--owd-window-button-primary-box-shadow-inactive);
+    color: var(--owd-window-button-primary-color-inactive);
   }
 
   &--tile,
   &--essential {
-    width: $owd-window-button-width;
+    width: var(--owd-window-button-width);
     min-width: inherit;
     padding: 0;
   }
@@ -24,49 +24,49 @@
 }
 
 @mixin btn {
-  background: $owd-window-button-background;
-  box-shadow: $owd-window-button-box-shadow;
-  border: $owd-window-button-border;
-  border-color: $owd-window-button-border-color;
-  color: $owd-window-button-icon-color;
-  border-radius: $owd-window-button-border-radius;
+  background: var(--owd-window-button-background);
+  box-shadow: var(--owd-window-button-box-shadow);
+  border: var(--owd-window-button-border);
+  border-color: var(--owd-window-button-border-color);
+  color: var(--owd-window-button-icon-color);
+  border-radius: var(--owd-window-button-border-radius);
   text-transform: initial;
   transition: none;
-  font-size: $owd-window-button-font-size;
+  font-size: var(--owd-window-button-font-size);
   letter-spacing: 0;
 
   &:hover {
-    background: $owd-window-button-background-hover;
-    box-shadow: $owd-window-button-box-shadow-hover;
-    border-color: $owd-window-button-border-color-hover;
-    color: $owd-window-button-icon-color-hover;
+    background: var(--owd-window-button-background-hover);
+    box-shadow: var(--owd-window-button-box-shadow-hover);
+    border-color: var(--owd-window-button-border-color-hover);
+    color: var(--owd-window-button-icon-color-hover);
   }
 
   &:active {
-    background: $owd-window-button-background-active;
-    box-shadow: $owd-window-button-box-shadow-active;
-    border-color: $owd-window-button-border-color-active;
-    color: $owd-window-button-icon-color-active;
+    background: var(--owd-window-button-background-active);
+    box-shadow: var(--owd-window-button-box-shadow-active);
+    border-color: var(--owd-window-button-border-color-active);
+    color: var(--owd-window-button-icon-color-active);
   }
 
   &.bg-primary {
-    background: $owd-window-button-primary-background;
-    border-color: $owd-window-button-primary-border-color;
-    box-shadow: $owd-window-button-primary-box-shadow;
-    color: $owd-window-button-primary-color;
+    background: var(--owd-window-button-primary-background);
+    border-color: var(--owd-window-button-primary-border-color);
+    box-shadow: var(--owd-window-button-primary-box-shadow);
+    color: var(--owd-window-button-primary-color);
 
     &:hover {
-      background: $owd-window-button-primary-background-hover;
-      border-color: $owd-window-button-primary-border-color-hover;
-      box-shadow: $owd-window-button-primary-box-shadow-hover;
-      color: $owd-window-button-primary-color-hover;
+      background: var(--owd-window-button-primary-background-hover);
+      border-color: var(--owd-window-button-primary-border-color-hover);
+      box-shadow: var(--owd-window-button-primary-box-shadow-hover);
+      color: var(--owd-window-button-primary-color-hover);
     }
 
     &:active {
-      background: $owd-window-button-primary-background-active;
-      border-color: $owd-window-button-primary-border-color-active;
-      box-shadow: $owd-window-button-primary-box-shadow-active;
-      color: $owd-window-button-primary-color-active;
+      background: var(--owd-window-button-primary-background-active);
+      border-color: var(--owd-window-button-primary-border-color-active);
+      box-shadow: var(--owd-window-button-primary-box-shadow-active);
+      color: var(--owd-window-button-primary-color-active);
     }
   }
 }
