--- a/assets/styles/partials/vuetify/VBtn/styles.scss
+++ b/assets/styles/partials/vuetify/VBtn/styles.scss
@@ -1,7 +1,16 @@
 @import 'mixins';
 
 .owd-desktop {
-  .owd-btn, .v-btn {
+  .v-btn {
     @include btn;
+  }
+
+  &:before {
+    box-shadow: initial;
+    display: none !important;
+  }
+
+  .v-ripple__container {
+    display: none;
   }
 }
