--- a/assets/styles/variants/default/variables.scss
+++ b/assets/styles/variants/default/variables.scss
@@ -30,20 +30,21 @@
   --owd-desktop-system-bar-menu-title-color: #353535;
   --owd-desktop-system-bar-menu-content-background: #353535;
   --owd-desktop-system-bar-menu-content-color: black;
+  --owd-desktop-system-bar-menu-content-separator: #2d2d2d;
   --owd-desktop-system-bar-menu-content-border-radius: 0;
   --owd-desktop-system-bar-menu-content-box-shadow: 0 0 0 1px #1b1b1b;
 
   // window
   --owd-window-background: #C0C0C0;
   --owd-window-text: black;
-  --owd-window-text-active: var(owd-window-text);
+  --owd-window-text-active: var(--owd-window-text);
   --owd-window-border-width: 2px;
   --owd-window-border-style: solid;
   --owd-window-border-radius: 0;
   --owd-window-border-color: white #393939 #393939 white;
   --owd-window-border-color-inactive: white #393939 #393939 white;
   --owd-window-box-shadow: none;
-  --owd-window-box-shadow-inactive: var(owd-window-box-shadow);
+  --owd-window-box-shadow-inactive: var(--owd-window-box-shadow);
   --owd-window-container-box-shadow: none;
 
   // window nav
@@ -77,63 +78,45 @@
   --owd-window-button-font-size: 14px;
   --owd-window-button-icon-size: 14px;
   --owd-window-button-background: #c3c3c3;
-  --owd-window-button-background-hover: var(owd-window-button-background);
-  --owd-window-button-background-active: var(owd-window-button-background);
-  --owd-window-button-background-inactive: var(owd-window-button-background);
+  --owd-window-button-background-hover: var(--owd-window-button-background);
+  --owd-window-button-background-active: var(--owd-window-button-background);
+  --owd-window-button-background-inactive: var(--owd-window-button-background);
   --owd-window-button-box-shadow: 1px 1px 0 0 black, 0px 1px 0 0 black, 1px 0px 0 0 black;
-  --owd-window-button-box-shadow-hover: var(owd-window-button-box-shadow);
-  --owd-window-button-box-shadow-active: var(owd-window-button-box-shadow);
-  --owd-window-button-box-shadow-inactive: var(owd-window-button-box-shadow);
+  --owd-window-button-box-shadow-hover: var(--owd-window-button-box-shadow);
+  --owd-window-button-box-shadow-active: var(--owd-window-button-box-shadow);
+  --owd-window-button-box-shadow-inactive: var(--owd-window-button-box-shadow);
   --owd-window-button-border: 1px solid;
   --owd-window-button-border-radius: 0;
   --owd-window-button-border-color: #ffffff #828282 #828282 #ffffff;
-  --owd-window-button-border-color-hover: var(owd-window-button-border-color);
-  --owd-window-button-border-color-active: var(owd-window-button-background);
-  --owd-window-button-border-color-inactive: var(owd-window-button-border-color);
+  --owd-window-button-border-color-hover: var(--owd-window-button-border-color);
+  --owd-window-button-border-color-active: var(--owd-window-button-background);
+  --owd-window-button-border-color-inactive: var(--owd-window-button-border-color);
   --owd-window-button-icon-color: #000000;
-  --owd-window-button-icon-color-hover: var(owd-window-button-icon-color);
-  --owd-window-button-icon-color-active: var(owd-window-button-icon-color);
-  --owd-window-button-icon-color-inactive: var(owd-window-button-icon-color);
-
-  // window buttons primary
-  --owd-window-button-primary-background: var(owd-primary); // linear-gradient(to bottom, #3483e4, #2379e2);
-  --owd-window-button-primary-background-hover: lighten(--owd-primary, 2%);
-  --owd-window-button-primary-background-active: #103e75;
-  --owd-window-button-primary-background-inactive: lighten(--owd-primary, 1%);
-  --owd-window-button-primary-box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.05);
-  --owd-window-button-primary-box-shadow-hover: inset 0 1px 0 0 rgba(255, 255, 255, 0.1);
-  --owd-window-button-primary-box-shadow-active: none;
-  --owd-window-button-primary-box-shadow-inactive: none;
-  --owd-window-button-primary-border-color: darken(--owd-primary, 12%);
-  --owd-window-button-primary-border-color-hover: darken(--owd-primary, 12%);
-  --owd-window-button-primary-border-color-active: #0f3b71;
-  --owd-window-button-primary-border-color-inactive: lighten(--owd-primary, 1%);
-  --owd-window-button-primary-color: #fff;
-  --owd-window-button-primary-color-hover: var(owd-window-button-primary-color);
-  --owd-window-button-primary-color-active: var(owd-window-button-primary-color);
-  --owd-window-button-primary-color-inactive: var(owd-window-button-primary-color);
+  --owd-window-button-icon-color-hover: var(--owd-window-button-icon-color);
+  --owd-window-button-icon-color-active: var(--owd-window-button-icon-color);
+  --owd-window-button-icon-color-inactive: var(--owd-window-button-icon-color);
 
   // window input
   --owd-window-input-height: inherit;
   --owd-window-input-padding: 0 5px;
   --owd-window-input-color: black;
-  --owd-window-input-color-hover: var(owd-window-input-color);
-  --owd-window-input-color-active: var(owd-window-input-color);
-  --owd-window-input-color-inactive: var(owd-window-input-color);
+  --owd-window-input-color-hover: var(--owd-window-input-color);
+  --owd-window-input-color-active: var(--owd-window-input-color);
+  --owd-window-input-color-inactive: var(--owd-window-input-color);
   --owd-window-input-background: white;
-  --owd-window-input-background-hover: var(owd-window-input-background);
-  --owd-window-input-background-active: var(owd-window-input-background);
-  --owd-window-input-background-inactive: var(owd-window-input-background);
+  --owd-window-input-background-hover: var(--owd-window-input-background);
+  --owd-window-input-background-active: var(--owd-window-input-background);
+  --owd-window-input-background-inactive: var(--owd-window-input-background);
   --owd-window-input-border: 1px solid;
   --owd-window-input-border-radius: 0;
   --owd-window-input-border-color: #000000 #bfbfbf #bfbfbf #000000;
-  --owd-window-input-border-color-hover: var(owd-window-input-border-color);
-  --owd-window-input-border-color-active: var(owd-window-input-border-color);
-  --owd-window-input-border-color-inactive: var(owd-window-input-border-color);
+  --owd-window-input-border-color-hover: var(--owd-window-input-border-color);
+  --owd-window-input-border-color-active: var(--owd-window-input-border-color);
+  --owd-window-input-border-color-inactive: var(--owd-window-input-border-color);
   --owd-window-input-box-shadow: 1px 1px 0 0 #ffffff, 0px 1px 0 0 #ffffff, 1px 0 0 0 #ffffff, -1px -1px 0 0 #828282, 0 -1px 0 0 #828282, -1px 0 0 0 #828282;
-  --owd-window-input-box-shadow-hover: var(owd-window-input-box-shadow);
-  --owd-window-input-box-shadow-active: var(owd-window-input-box-shadow);
-  --owd-window-input-box-shadow-inactive: var(owd-window-input-box-shadow);
+  --owd-window-input-box-shadow-hover: var(--owd-window-input-box-shadow);
+  --owd-window-input-box-shadow-active: var(--owd-window-input-box-shadow);
+  --owd-window-input-box-shadow-inactive: var(--owd-window-input-box-shadow);
 
   // window content
   --owd-window-content-padding: 12px;
@@ -148,7 +131,7 @@
   --owd-window-table-row-hover: rgba(0, 0, 0, 0.08);
 
   --owd-window-item-background: transparent;
-  --owd-window-item-background-hover: var(owd-window-nav-background);
+  --owd-window-item-background-hover: var(--owd-window-nav-background);
   --owd-window-item-text-color: black;
   --owd-window-item-text-color-hover: white;
   --owd-window-item-border-color: rgba(255, 255, 255, 0.2);
